# Random-Early-Detection-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client  client.cpp  gateway  gateway-old.cpp  gateway.cpp  log.txt  plotter.py  run.sh  to-do.txt
.circleci/: config.yml
high/: hostrate-high.txt
include/: client.h  gateway.h  packet.h  server.h
low/: hostrate-low.txt
mid/: hostrate-mid.txt
samples/: log-2.txt  log-3.txt
samples/RED/low/: hostrate-low.txt
samples/RED/mid/: hostrate-mid.txt
samples/RED/topology/: ports.txt  topology-client.txt  topology-gateway.txt  topology-server.txt
samples/RRED/high/: hostrate-high.txt
samples/WRED/topology/: topology-client.txt
samples/high/: hostrate-high.txt
samples/taildrop/topology/: topology-client.txt
src/: Test.cpp  client.cpp  client.h  gateway.cpp  gateway.h  plotter.py  server.cpp  server.h
src/RED/: CMakeLists.txt  client.cpp  gateway.cpp  plotter.py  server.cpp
src/RRED/: CMakeLists.txt  client.cpp  gateway.cpp  plotter-throughput.py  plotter.py  server.cpp
src/WRED/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  gateway.cpp  plotter.py  server.cpp
src/taildrop/: CMakeLists.txt  client.cpp  gateway.cpp  plotter.py  server.cpp
